--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
 
 html, body{
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 650px;
+  background: rgb(46,70,106);
+background: linear-gradient(90deg, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
 }
 
 #wrap, label{
@@ -54,9 +57,20 @@ input{
 
 li{
   padding: 20px;
-  background-color: #E0E0E0;
+  background-color: #e8edef;
   border-bottom: 1px dashed #9E9E9E;
   list-style: none;
+}
+
+li:hover{
+  background-color: #d7e7e8;
+  cursor: pointer;
+  font-style: italic;
+}
+
+li:last-child{
+  border-bottom: none;
+  box-shadow: 10px 6px 20px -10px rgba(0, 0, 0, 0.32);
 }
 
 a{
