--- a/styles.css
+++ b/styles.css
@@ -21,10 +21,16 @@ background: linear-gradient(90deg, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
 }
 
 #container{
-  background: #f5f5f5;
+  background: #FAFAFA;
   text-align: center;
-  padding: 10%;
+  padding: 5% 10% 10% 10%;
   border-radius: 10px;
+  border-bottom: 5px solid #a9a9a9;
+  box-shadow: 10px 6px 20px -10px rgba(0, 0, 0, 0.32);
+}
+
+#container:hover{
+  border-bottom: none;
 }
 
 label, input{
@@ -42,7 +48,16 @@ button{
   background-color: #00ACC1;
   border-radius: 0 8px 8px 0;
   color: #fff;
-  width: 50px;
+  width: 20%;
+  border-bottom: 5px solid #029caf;
+}
+
+button:hover{
+  border-bottom: 1px solid #a9a9a9;
+}
+
+button, button:hover, #container{
+  transition: border-bottom 200ms;
 }
 
 input[type='text']{
@@ -80,4 +95,8 @@ a{
 
 .links_container{
   text-align: center;
+}
+
+img{
+  width: 25%;
 }
