--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@ html, body{
   height: 100%;
   min-height: 650px;
   background: rgb(46,70,106);
-background: linear-gradient(90deg, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
+  background: -webkit-linear-gradient(left, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
+  background: -o-linear-gradient(left, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
+  background: linear-gradient(to right, rgba(46,70,106,1) 0%, rgba(220,45,45,1) 84%);
+  text-align: center;
 }
 
 #wrap, label{
